Update IE6 float drop fix for shifted columns; remove un-needed position: relative; from IE6 last column fix

--- a/src/flurid2.css
+++ b/src/flurid2.css
@@ -43,18 +43,18 @@
   margin-right: -1px;
 }
 
+/* Append/prepend */
+.flurid .pad {
+  display: inline; /* Fixes IE6 double margin bug */
+}
+
 /* Push/pull */
 .flurid .shift {
   position: relative;
 }
 
-/* Fix IE6 double margin bug */
-* html .flurid .pad {
-  display: inline;
-}
-
 /* Fix IE6 "float-drop" bug */
-* html .flurid .move .column {
+* html .flurid .shift .column {
   left: 1px;
   margin-right: -1px;
 }
@@ -661,6 +661,5 @@
   left: -3px; /* shift three pixels to the left */
   margin: 0 -3px 0 3px; /* expand three pixels to the right */
   overflow: visible; /* prevent incorrect hiding of last column */
-  position: relative;
 }
 
